# gnf-evidence-engine

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
dashboard/: app.py
dashboard/templates/: index.html
docker/: Dockerfile
docs/: architecture_overview.md  meta_analysis_methods.md  tsa_explainer.md
notebooks/: 01_extraction_demo.py  02_meta_analysis_demo.py  03_tsa_demo.py
schemas/: extraction_schema.json  study_schema.json
src/: __init__.py
src/certainty/: __init__.py  grade_assessment.py
src/extraction/: __init__.py  pdf_parser.py  pubmed_fetcher.py  structured_extractor.py
src/meta_analysis/: __init__.py  _result.py  fixed_effects.py  forest_plot.py  funnel_plot.py  heterogeneity.py  random_effects.py
src/provenance/: __init__.py  audit_log.py  tracker.py  versioning.py
src/structured_schema/: __init__.py  effect_record.py  study_record.py
src/tsa/: __init__.py  information_size.py  spending_functions.py  trial_sequential.py  tsa_plot.py
src/update_scheduler/: __init__.py  scheduler.py
tests/: __init__.py  conftest.py  test_meta_analysis.py  test_provenance.py  test_tsa.py
